# lab

./: .gitignore  .gitmodules
architecture/: Production.md  README.md  base.md  commonware.md  flashblock.md  lighthouse.md  rollupboost.md  seq_anti_ddos.md  solana_turbine.md  tempo.md
cpu-benches/: README.md
design-pattern/: README.md
eth/: README.md  pyproject.toml  reth.md  rlp.py
eth/contracts/: foundry.toml
eth/contracts/src/: Accesslist.sol  BatchCallDelegation.sol  StorageSlot.sol
eth/contracts/test/: Call.t.sol  EIP1153.t.sol  EIP4788.t.sol  EIP7702.t.sol  Precompile.t.sol  StorageSlot.t.sol
eth/go/: access_list.go  access_list_count.go  code_test.go  debug.go  go.mod  go.sum  mashal_test.go  stagesync_test.go
eth/go/trie/: encoding.go  hashdb.go  hashdb_test.go  pathdb.go  pathdb_test.go  trie.go  util.go
eth/golang/: go.mod  mpt_trie_test.go  utils.go
eth/notes/: 2930.md  7702.md  7928.md  engineapi.md  erigon.md  evm_opt.md  geth.md  llvm.md  nethermind.md  op-stack.md  plan.md  reorg.md  reth.md  staged-sync.md  tee.md
eth/notes/tee/: Cargo.toml  README.md
eth/notes/tee/guests/adder/: Cargo.toml
eth/notes/tee/guests/adder/src/: lib.rs
eth/notes/tee/src/: lib.rs  main.rs
eth/python/: access_list.py  kademlia.py  randao.py  rlp_test.py
eth/utils/: bls.py
fhe/: Cargo.toml  README.md
kecack/: go.mod  hash.go
kernel/: eBPF.md
kv-db/: Makefile  README.md  bench_large_read.sh  bench_large_read_pool.sh  bench_read.sh  bench_write.sh  go.mod  go.sum
mycrypto/: Cargo.toml
mycrypto/src/: main.rs  xmss.rs
perf/: Cargo.toml  (+5 more)
(+38 files in other folders)
