[package]
name = "tee"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["guests/adder"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.13"
